finished api for board
